# GraphicsEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: engine.h  mathematics.h  matrix.h  mesh.h  object.h  primitives.h
scripts/: build.sh  clean.sh  configure.sh  run.sh  setup.sh
src/: engine.cpp  mathematics.cpp  matrix.cpp  mesh.cpp
